Add runall.sh script